# semantic-navigator

./: README.md  facets.py  flake.nix  package.json  pyproject.toml  tsconfig.json
semantic_navigator/: main.py
src/: auth.ts  cache.ts  cluster.ts  embed.ts  extension.ts  fs.ts  labels.ts  main.ts  tokenize.ts  tree.ts  ui.ts
