[project]
name = "semantic-navigator"
version = "1.0.0"
description = "A semantic project navigator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "gitpython",
    "openai[aiohttp]",
    "scikit-learn",
    "textual",
    "tiktoken",
    "tqdm",
]
[project.scripts]
semantic-navigator = "semantic_navigator.main:main"
