[project]
name = "semantic-navigator"
version = "1.0.0"
description = "A semantic project navigator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "dulwich",
    "openai[aiohttp]",
    "pydantic",
    "scikit-learn",
    "textual",
    "tiktoken",
    "tqdm",
]

[project.scripts]
semantic-navigator = "semantic_navigator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semantic_navigator"]
